2006-03-23 Mikhail Khodjaiants
	Added default attribute value for ATTR_DEBUG_NAME.
	* IMILaunchConfigurationConstants.java

2006-03-21 Mikhail Khodjaiants
	Missing error message.
	* MIPluginResources.properties

2006-03-20 Mikhail Khodjaiants
	Made "getCommandFile" and "getWorkingDirectory" methods protected.
	* GDBCDIDebugger2.java
	
2006-03-16 Mikhail Khodjaiants
	ILaunch is added to the arguments list of "doStartSession".
	* AbstractGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* GDBCDIDebugger2.java
 
2006-03-13 Mikhail Khodjaiants
	Added default implementation for "getExtraArguments". No need to force 
	clients to implement this method.
	* AbstractGDBCDIDebugger.java

2006-02-09 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	Registered windows and linux specific command factories for gdbserver.
	* plugin.properties
	* plugin.xml

2006-02-09 Mikhail Khodjaiants
	The inferior is in the suspended state when connecting to gsbserver.
	* GDBServerCDIDebugger2.java

2006-02-08 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	Added standard command factory for gdb server.
	* plugin.xml
	* plugin.properties
	
2006-02-07 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	+ mi/org/eclipse/cdt/debug/mi/core/command/factories/linux (package)
	+ LinuxCLIInfoSharedLibrary.java
	+ LinuxCLIInfoSharedLibraryInfo.java
	+ StandardLinuxCommandFactory.java
	* plugin.xml

2006-02-07 Mikhail Khodjaiants
	Bug 126789: Use new "fullname" attribute of stack frame description.
	* MIStackListFrames.java
	* MIFrame.java

2006-02-06 Mikhail Khodjaiants
	Suppress "set auto-solib" - returns error on Windows.
	* StandardWinCommandFactory.java

2006-02-06 Mikhail Khodjaiants
	Use getters to access members of "MICommand".
	* MIBreakCondition.java
	* MICommand.java
	* MIDataDisassemble.java
	* MIEnvironmentCD.java
	* MIGDBSetEnvironment.java
