@@ -33,9 +33,9 @@ public class CygwinGDBCDIDebugger2 extends GDBCDIDebugger2 {
 	}
 
 	/* (non-Javadoc)
-	 * @see org.eclipse.cdt.debug.mi.core.GDBCDIDebugger2#doStartSession(org.eclipse.debug.core.ILaunch, org.eclipse.debug.core.ILaunchConfiguration, org.eclipse.cdt.debug.mi.core.cdi.Session, org.eclipse.core.runtime.IProgressMonitor)
+	 * @see org.eclipse.cdt.debug.mi.core.GDBCDIDebugger2#doStartSession(org.eclipse.debug.core.ILaunch, org.eclipse.cdt.debug.mi.core.cdi.Session, org.eclipse.core.runtime.IProgressMonitor)
 	 */
-	protected void doStartSession( ILaunch launch, ILaunchConfiguration config, Session session, IProgressMonitor monitor ) throws CoreException {
+	protected void doStartSession( ILaunch launch, Session session, IProgressMonitor monitor ) throws CoreException {
 		// For windows we need to start the inferior in a new console window
 		// to separate the Inferior std{in,out,err} from gdb std{in,out,err}
 		MISession miSession = getMISession( session );
@@ -52,7 +52,7 @@ public class CygwinGDBCDIDebugger2 extends GDBCDIDebugger2 {
 			// We ignore this exception, for example
 			// on GNU/Linux the new-console is an error.
 		}		
-		super.doStartSession( launch, config, session, monitor );
+		super.doStartSession( launch, session, monitor );
 	}
 
 	/* (non-Javadoc)
