@@ -97,9 +97,10 @@ public class GDBCDIDebugger2 extends AbstractGDBCDIDebugger {
 	}
 
 	/* (non-Javadoc)
-	 * @see org.eclipse.cdt.debug.mi.core.AbstractGDBCDIDebugger#doStartSession(org.eclipse.debug.core.ILaunch, org.eclipse.debug.core.ILaunchConfiguration, org.eclipse.cdt.debug.mi.core.cdi.Session, org.eclipse.core.runtime.IProgressMonitor)
+	 * @see org.eclipse.cdt.debug.mi.core.AbstractGDBCDIDebugger#doStartSession(org.eclipse.debug.core.ILaunch, org.eclipse.cdt.debug.mi.core.cdi.Session, org.eclipse.core.runtime.IProgressMonitor)
 	 */
-	protected void doStartSession( ILaunch launch, ILaunchConfiguration config, Session session, IProgressMonitor monitor ) throws CoreException {
+	protected void doStartSession( ILaunch launch, Session session, IProgressMonitor monitor ) throws CoreException {
+		ILaunchConfiguration config = launch.getLaunchConfiguration();
 		initializeLibraries( config, session );
 		if ( monitor.isCanceled() ) {
 			throw new OperationCanceledException();
