@@ -21,6 +21,7 @@ import org.eclipse.cdt.debug.mi.core.output.MIInfo;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.OperationCanceledException;
+import org.eclipse.debug.core.ILaunch;
 import org.eclipse.debug.core.ILaunchConfiguration;
  
 /**
@@ -29,9 +30,10 @@ import org.eclipse.debug.core.ILaunchConfiguration;
 public class GDBServerCDIDebugger2 extends GDBCDIDebugger2 {
 
 	/* (non-Javadoc)
-	 * @see org.eclipse.cdt.debug.mi.core.GDBCDIDebugger2#doStartSession(org.eclipse.debug.core.ILaunchConfiguration, org.eclipse.cdt.debug.mi.core.cdi.Session, org.eclipse.core.runtime.IProgressMonitor)
+	 * @see org.eclipse.cdt.debug.mi.core.GDBCDIDebugger2#doStartSession(org.eclipse.debug.core.ILaunch, org.eclipse.cdt.debug.mi.core.cdi.Session, org.eclipse.core.runtime.IProgressMonitor)
 	 */
-	protected void doStartSession( ILaunchConfiguration config, Session session, IProgressMonitor monitor ) throws CoreException {
+	protected void doStartSession( ILaunch launch, Session session, IProgressMonitor monitor ) throws CoreException {
+		ILaunchConfiguration config = launch.getLaunchConfiguration();
 		initializeLibraries( config, session );
 		if ( monitor.isCanceled() ) {
 			throw new OperationCanceledException();
